# conan-center-index

recipes/mdl/: config.yml
recipes/mdl/all/: conandata.yml  conanfile.py
recipes/mdl/all/test_package/: CMakeLists.txt  test_package.cpp
src/mdl/jit/devlib/: CMakeLists.txt
